--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<ul *ngFor="let business of businesses">
-  <li>{{business.company}}</li>
-</ul>
+<div class="top-bar">
+  <div class="row">
+    <div class="top-bar-left">
+      <ul class="menu">
+        <li class="menu-text">BusinessContacts</li>
+      </ul>
+    </div>
+    <div class="top-bar-right">
+      
+    </div>
+  </div>
+</div>
