--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,39 @@
       </ul>
     </div>
     <div class="top-bar-right">
-      
+
+    </div>
+  </div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="large-12 columns">
+    <div *ngIf="businesses">
+      <table>
+        <thead>
+          <tr>
+            <th>Company</th>
+            <th>Category</th>
+            <th>Phone</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let business of businesses">
+            <td>{{business.company}}</td>
+            <td>{{business.category}}</td>
+            <td>{{business.phone}}</td>
+            <td>
+              <button class="button">More</button>
+              <button class="button secondary">Edit</button>
+              <button class="button alert">Delete</button>
+
+
+            </td>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
