--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,15 @@
         <p>{{business.description}}</p>
       </div>
       <div class="large-5 columns large-offset-1">
-        
+        <h4>Contact Info</h4>
+        <ul>
+          <li>Phone: {{business.phone}}</li>
+          <li>Email: {{business.email}}</li>
+          <li>Street: {{business.street_address}}</li>
+          <li>City: {{business.city}}</li>
+          <li>State: {{business.state}}</li>
+          <li>Zipcode: {{business.zipcode}}</li>
+        </ul>
       </div>
     </div>
   </div>
