--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
     </label>
   </div>
 </div>
-
+<!-- ADD FORM -->
 <div *ngIf="appState == 'add'" class="row">
   <div class="large-12 columns">
     <h3>Add Business</h3>
@@ -117,6 +117,89 @@
   </div>
 </div>
 
+<!-- EDIT FORM -->
+<div *ngIf="appState == 'edit'" class="row">
+  <div class="large-12 columns">
+    <h3>Edit Business</h3>
+    <form (submit)="updateBusiness()">
+      <div class="row">
+        <div class="large-6 columns">
+          <label>Company
+            <input type="text" [(ngModel)]="activeCompany" name="activeCompany" placeholder="Company Name" #company>
+          </label>
+        </div>
+        <div class="large-6 columns">
+          <label>Category
+            <select [(ngModel)]="activeCategory" name="activeCategory" #category>
+              <option value="0">Select</option>
+              <option *ngFor="let category of categories" value="{{category.name}}">{{category.name}}</option>
+            </select>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>Years In Business
+            <input type="text" [(ngModel)]="activeYearsInBusiness" name="activeYearsInBusiness" placeholder="Years in Business" #years_in_business>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>Description
+            <textarea #description></textarea>
+          </label>
+        </div>
+      </div>
+
+       <div class="row">
+        <div class="medium-6 columns">
+          <label>Phone
+            <input [(ngModel)]="activePhone" name="activePhone" type="text" placeholder="Phone" #phone>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>Email
+            <input [(ngModel)]="activeEmail" name="activeEmail" type="text" placeholder="Email" #email>
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>Street Address
+            <input [(ngModel)]="activeStreetAddress" name="activeStreetAddress" type="text" placeholder="Street Address" #street_address>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>City
+            <input [(ngModel)]="activeCity" name="activeCity" type="text" placeholder="City" #city>
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="medium-6 columns">
+          <label>State
+            <input [(ngModel)]="activeState" name="activeState" type="text" placeholder="State" #state>
+          </label>
+        </div>
+        <div class="medium-6 columns">
+          <label>Zipcode
+            <input [(ngModel)]="activeZipcode" name="activeZipcode" type="text" placeholder="Zipcode" #zipcode>
+          </label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-12 columns">
+          <input type="submit" class="button" value="Submit">
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+
+
 <div *ngIf="appState == 'extend'">
   <div class="row">
     <div class="large-12 columns">
@@ -170,7 +253,7 @@
             <td>
               <button class="button" (click)="changeState('extend', business.$key)">More</button>
               <button (click)="showEdit(business)" class="button secondary">Edit</button>
-              <button class="button alert">Delete</button>
+              <button (click)="deleteBusiness(business.$key)" class="button alert">Delete</button>
 
 
             </td>
